<resources>
    <string name="app_name">Fondos de pantalla</string>
    <string name="desarrollador">Desarrollado Por: Sergio Mostacero</string>

    <!--DRAWER-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--ProgressBar-->
    <string name="text_message">Espere por favor</string>

    <!--MENU ADMIN-->
    <string name="InicioAdmin">Inicio</string>
    <string name="PerfilAdmin">Perfil</string>
    <string name="RegistrarAdmin">Registrar</string>
    <string name="ListarAdmin">Lista de administradores</string>
    <string name="Salir">Cerrar sesión</string>

    <!--MENU CLIENTE-->
    <string name="Opcionestxt">Opciones</string>
    <string name="InicioCliente">Inicio</string>
    <string name="MasOpcionestxt">Más opciones</string>
    <string name="AcercaDe">Acerca De</string>
    <string name="Compartir">Compartir</string>
    <string name="Administrador">Administrador</string>

    <!--REGISTRO DE ADMINISTRADORES-->
    <string name="RegistroTXT">Registro de administradores</string>
    <string name="Correo">Correo electrónico</string>
    <string name="Password">Contraseña</string>
    <string name="Nombres">Nombres completos</string>
    <string name="Apellidos">Apellidos completos</string>
    <string name="Edad">Edad</string>
    <string name="FechaDeRegistro">Fecha de Registro</string>
    <string name="Registrar">Registrar</string>
    <string name="message_register_alert">Por favor llene todos los campos</string>
    <string name="register_success">Registro exitoso</string>

    <!--NOMBRE DE BOTONES-->
    <string name="Acceder">Acceder</string>

    <!--LOGIN-->
    <string name="LoginTXT">Login de administradores</string>
    <string name="Ingresar">Ingresar</string>
    <string name="login">Inicio sesión</string>
    <string name="empty_box">Por favor llene todos los campos</string>
    <string name="email_invalid">Correo inválido</string>
    <string name="password_invalid">Contraseña debe ser mayor o igual a 6</string>
    <string name="error">Ha ocurrido un error</string>
    <string name="error_credentials">VERIFIQUE SU CORREO Y CONTRASEÑA</string>
    <string name="ok">Entendido</string>
    <string name="login_load">Iniciando sesión</string>

    <!--CATEGORIAS-->
    <string name="fechaAdmin"> -- </string>
    <string name="welcomeTXT"> Bienvenido(a): </string>
    <string name="NombreTXT"> -- </string>
    <string name="Eligeunacategoria">Elige una categoria</string>
    <string name="Peliculas">PELICULAS</string>
    <string name="Series">SERIES</string>
    <string name="Musica">MUSICA</string>
    <string name="Videojuegos">VIDEOJUEGOS</string>

    <!--MENU PARTE SUPERIOR DERECHA-->
    <string name="Agregar">Agregar</string>
    <string name="Vista">Vista</string>

    <!--AGREGAR PELICULAS-->
    <string name="idPeliculas"> -- </string>
    <string name="NombreTXTPeliculas">Nombre de imagen</string>
    <string name="NombrePeliculas">Escriba nombre aqui</string>
    <string name="VistaPeliculas">0</string>
    <string name="PublicarPelicula">Publicar</string>
    <string name="NombreImagenPelicula"> -- </string>
    <string name="VistaPelicula"> -- </string>

    <!--AGREGAR MUSICA-->
    <string name="idMusica"> -- </string>
    <string name="NombreTXTMusica">Nombre de imagen</string>
    <string name="NombreMusica">Escriba nombre aqui</string>
    <string name="VistaMusicas">0</string>
    <string name="PublicarMusica">Publicar</string>
    <string name="NombreImagenMusica"> -- </string>
    <string name="VistaMusica"> -- </string>

    <!--AGREGAR SERIE-->
    <string name="idSeries"> -- </string>
    <string name="NombreTXTSerie">Nombre de imagen</string>
    <string name="NombreSerie">Escriba nombre aqui</string>
    <string name="VistaSeries">0</string>
    <string name="PublicarSerie">Publicar</string>
    <string name="NombreImagenSerie"> -- </string>
    <string name="VistaSerie"> -- </string>

    <!--AGREGAR VIDEOJUEGO-->
    <string name="idVideojuegos"> -- </string>
    <string name="NombreTXTVideojuego">Nombre de imagen</string>
    <string name="NombreVideojuego">Escriba nombre aqui</string>
    <string name="VistaVideojuegos">0</string>
    <string name="PublicarVideojuego">Publicar</string>
    <string name="NombreImagenVideojuego"> -- </string>
    <string name="VistaVideojuego"> -- </string>

    <!--DIALOG ORDENAR-->
    <string name="OrdenarTXT">Ordenar en: </string>
    <string name="Dos_Columnas">2 Columnas</string>
    <string name="Tres_Columnas">3 Columnas</string>

    <!--PERFIL-->
    <string name="PERFILADMINISTRADORTXT">MI PERFIL</string>
    <string name="MIINFORMACIONTXT">MI INFORMACION</string>
    <string name="UIDPERFILTXT">Uid: </string>
    <string name="UIDPERFIL"> -- </string>
    <string name="NOMBRESPERFILTXT">Nombres: </string>
    <string name="NOMBRESPERFIL"> -- </string>
    <string name="APELLIDOSPERFILTXT">Apellidos: </string>
    <string name="APELLIDOSPERFIL"> -- </string>
    <string name="CORREOPERFILTXT">Correo: </string>
    <string name="CORREOPERFIL"> -- </string>
    <string name="PASSWORDPERFILTXT">Password: </string>
    <string name="PASSWORDPERFIL"> -- </string>
    <string name="EDADPERFILTXT">Edad: </string>
    <string name="EDADPERFIL"> -- </string>
    <string name="ACTUALIZARPASS">Actualizar password</string>
    <string name="ACTUALIZARDATOS">Actualizar Datos</string>
    <string name="choose_option">Elegir opción: </string>
    <string name="title_choose_option">Actualizar información: </string>
    <string name="enter_new_data">Ingrese nuevo dato </string>
    <string name="button_positive">Actualizar </string>
    <string name="new_data_update">Dato actualizado </string>
    <string name="text_empty">Campo vacío</string>
    <string name="button_negative">Cancelar</string>
    <string name="message_cancel">Cancelado por el usuario</string>
    <string name="select_photo_from">Seleccionar imagen de:</string>
    <string name="permission_denied">Permiso denegado</string>
    <string name="change_image_success">Imagen cambiada con éxito</string>
    <string-array name="options">
        <item>Editar nombres</item>
        <item>Editar apellidos</item>
        <item>Editar edad</item>
    </string-array>
    <string-array name="choose_photo_option">
        <item>Cámara</item>
        <item>Galería</item>
    </string-array>

    <!--CAMBIAR DE CONTRASEÑA-->
    <string name="MisCredencialesTXT">Mis credenciales</string>
    <string name="PassActualTXT">Contraseña actual: </string>
    <string name="PassActual"> -- </string>
    <string name="ActualPassET"> Contraseña Actual </string>
    <string name="NuevoPassET"> Nueva Contraseña </string>
    <string name="change_password"> Cambiar contraseña </string>
    <string name="IRINICIOBTN"> IR INICIO </string>
    <string name="NOTATXT">Nota: Si cambia la contraseña, se cerrará sesión automáticamente</string>
    <string name="password_success_change">Contraseña cambiada</string>
    <string name="password_text_empty">El campo contraseña actual está vacío</string>
    <string name="passwordNew_text_empty">El campo contraseña nueva está vacío</string>

    <!--ADMINISTRADOR ITEM-->
    <string name="NombresADMIN"> Nombres </string>
    <string name="CorreoADMIN"> Correo Electrónico </string>

    <string name="buscar_administrador">Buscar</string>

    <!--DETALLE ADMINISTRADOR-->
    <string name="DetalleTXT">Detalle del Administrador</string>
    <string name="UidDetalleAdmin">UID</string>
    <string name="NombresDetalleAdmin">NOMBRES</string>
    <string name="ApellidosDetalleAdmin">APELLIDOS</string>
    <string name="CorreoDetalleAdmin">CORREO</string>
    <string name="EdadDetalleAdmin">EDAD</string>
    <string name="detail_toolbar">Detalle</string>

    <!---->
    <string name="CategoriasTXT">Categorias</string>
    <string name="NombreCategoriaD"> -- </string>
    <string name="MasCategiriasTXT">Más categorías</string>
    <string name="NombreCategoriaF"> -- </string>
    <string name="InfoTXT">Disfruta de nuestra app</string>

    <!--IMAGEN CAT FIREBASE ELEGIDA-->
    <string name="NombreImg_Cat_Elegida"> -- </string>
    <string name="VistaImg_Cat_Elegida"> -- </string>

    <!--DETALLE IMAGEN-->
    <string name="NombreImagenTXT">Nombre de imagen</string>
    <string name="NombreImagenDetalle"> -- </string>
    <string name="VisualizacionTXT">Visualizaciones</string>
    <string name="VistaDetalle"> -- </string>

    <!---->
    <string name="TituloInformativoTXT"> -- </string>

    <!--ACERCA DE APLICACION-->
    <string name="fecha"> -- </string>
    <string name="AcercaDeApp">Acerca De</string>
    <string name="InfoDesarrollador">Desarrollado por: Sergio Mostacero</string>
    <string name="InfoCorreo">sergiomv2803@gmail.com</string>
    <string name="InfoVersion">Versión: 1.0</string>
    <string name="InfoRedes">Nuestras Redes</string>
    <string name="ir_github">Git Hub</string>
    <string name="ir_instagram">Instagram</string>
    <string name="ir_twitter">Twitter</string>
    <string name="ir_linkedin">Linkedin</string>

    <!--CONECTIVIDAD-->
    <string name="SinConexionTXT">Sin conexión a internet</string>

    <!--ANIMACIONES-->
    <!--ACTIVAR PERMISOS-->
    <string name="ACTIVEPERMISOS">ACTIVE LOS PERMISOS DE ALMACENAMIENTO</string>
    <string name="OKPERMISOS">OK</string>

    <!--DSECARGA EXITOSA-->
    <string name="DESCARGAEXITOSATXT">DESCARGA EXITOSA</string>
    <string name="GUARDADOENTXT">Guardado en la carpeta Fondos</string>
    <string name="OKDESCARGA">OK</string>

    <!--ESTABLECER COMO FONDO-->
    <string name="ESTABLECIDOTXT">SE ESTABLECIÓ COMO FONDO DE PANTALLA</string>
    <string name="OKESTABLECIDO">OK</string>


    <!--COMPARTIR APLICACION-->
    <string name="AyudanosTXT">Ayudanos a crecer compartiendo nuestra app la cual es de manera gratuita</string>
    <string name="BotonCompartir">Compartir App</string>

    <!--APARTADO ADMINISTRADORES-->
    <string name="SoloadminTXT">Solo para administradores</string>

    <!--TEST-->
    <string name="prueba">PRUEBA</string>
</resources>