<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/Opcionestxt"
        android:title="@string/Opcionestxt">

        <menu>

            <item
                android:id="@+id/InicioCliente"
                android:icon="@drawable/uno_icon"
                android:title="@string/InicioCliente" />

        </menu>

    </item>

    <item
        android:id="@+id/MasOpcionestxt"
        android:title="@string/MasOpcionestxt">

        <menu>

            <item
                android:id="@+id/AcercaDe"
                android:title="@string/AcercaDe"
                android:icon="@drawable/acerca_de_icon"/>

            <item
                android:id="@+id/Compartir"
                android:title="@string/Compartir"
                android:icon="@drawable/compartir_icon"/>

        </menu>

    </item>

</menu>