<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".FragmentosAdminsitrador.PerfilAdmin">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/PERFILADMINISTRADORTXT"
            android:textColor="#086A87"
            android:textSize="20sp"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/FOTOPERFILIMG"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:src="@drawable/perfil" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/MIINFORMACIONTXT"
            android:textColor="#086A87"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!--UID-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/UIDPERFILTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UIDPERFILTXT"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/UIDPERFIL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/UIDPERFIL"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--NOMBRES-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/NOMBRESPERFILTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NOMBRESPERFILTXT"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/NOMBRESPERFIL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/NOMBRESPERFIL"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--APELLIDOS-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/APELLIDOSPERFILTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/APELLIDOSPERFILTXT"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/APELLIDOSPERFIL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/APELLIDOSPERFIL"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--CORREO-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/CORREOPERFILTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CORREOPERFILTXT"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/CORREOPERFIL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/CORREOPERFIL"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--PASSWORD-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/PASSWORDPERFILTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PASSWORDPERFILTXT"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/PASSWORDPERFIL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/PASSWORDPERFIL"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--EDAD-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/EDADPERFILTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EDADPERFILTXT"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/EDADPERFIL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/EDADPERFIL"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/black" />

        <Button
            android:id="@+id/ACTUALIZARPASS"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_personalizado_dos"
            android:drawableStart="@drawable/editar_icon"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:text="@string/ACTUALIZARPASS"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/ACTUALIZARDATOS"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_personalizado_dos"
            android:drawableStart="@drawable/editar_icon"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:text="@string/ACTUALIZARDATOS"
            android:textColor="@color/white" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>